// Copyright 2017 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.
//
// feature_engagement::AvailabilityModel content.

syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package feature_engagement;

// Availability stores state for the availability of a particular feature.
message Availability {
  // The name of the feature. Must match base::Feature::name.
  optional string feature_name = 1;

  // The day number since epoch (1970-01-01) in the local timezone for when the
  // particular |feature| was made available.
  optional uint32 day = 2;
}
